add gallery to noble

--- a/noble.html
+++ b/noble.html
@@ -43,16 +43,19 @@
             The Noble Bitter Comapny needed a brand identity. This website would be the first public appearence for them and it needed to speak to their brand. The goal was to make sure that they make the right impression and convey the feeling of classic modern.
           </p>
         </div>
+        <div class="noble-gallery">
+          <img src="img/noble/CaseStudy1.png" alt="" />
+        </div>
         <div class=" noble case-process">
-
+          <img src="" alt="" />
           <h1>Process</h1>
-          <img src="img/noble/bitter.png" alt="" />
           <p>
             During the discovery process we focused on the primary task of the website. Along with this we talked about the feeling we wanted to envoke when people talked about The Noble Bitter Company. <br>
             The first thing to do was to develop a brand identity. Meeting with the client, he wanted it to be classic but not have a feeling that you were stuck in the past. We came up with the words classically simple.
             Based on this idea, we developed a logo that encaptures it.
             The next step was to create a wireframe where we were able figure out what needed to be highlighted on the main page. And what other things needed to be strongly present.
           </p>
+          <img src="img/noble/bitter.png" alt="" />
 
         </div>
         <div class="noble case-solution">
