--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       <link rel="icon" href="img/hello.png">
       <script src="js/jquery-1.12.3.js"></script>
       <script src="js/scripts.js"></script>
-      <script type="text/javascript" src="js/jquery-ui.min.js"></script>
       <script type="text/javascript" src="js/jquery.slimscroll.min.js"></script>
       <script type="text/javascript" src="js/jquery.fullPage.js"></script>
   </head>
@@ -63,44 +62,43 @@
                   <h2>GitHub Search</h2>
                   <h3>JavaScript API</h3>
                 </div>
-                <div id="soon" class="work-name">
-                  <h2>Coming Soon</h2>
-                  <h3>Coming Soon</h3>
+                <div id="noble" class="work-name">
+                  <h2>The Noble Bitter Company</h2>
+                  <h3>Branding // UI UX // Web</h3>
                 </div>
               </div>
           <!-- </div> -->
 <!-- WORK GALLERY ENDS -->
 <!-- WORK CONTENT ALL -->
           <div id="taproom-info"class="work-content">
-            <img src="img/Taproom.png" alt="taproom app" />
             <a href="https://github.com/mthygesen2/JS-Taproom">Tap Room</a>
             <h2>JavaScript Angular2</h2>
             <p>
               An application that show cases the use of Angular2 while it was still in beta. A functional app made with limited documentation.
             </p>
+            <img src="img/Taproom.png" alt="taproom app" />
             <span class="back">back</span>
           </div>
           <div id="wild-info" class="work-content">
-            <img src="img/wild.png" alt="hello wild css" />
             <a href="http://mthygesen2.github.io/hello-wild/">Hello Wild</a>
-            <h2>CSS / Html</h2>
+            <h2>Responsive Design</h2>
             <p>
-              A replica of the site Arctic Wild. Made purely using CSS and Html. Fully responsive.
+              A replica of the site Arctic Wild. Made purely using CSS and Html.
             </p>
+            <img src="img/wild.png" alt="hello wild css" />
             <span class="back">back</span>
           </div>
           <div id="git-info" class="work-content">
-            <img src="img/git.png" alt="github api app" />
-
             <a href="https://github.com/mthygesen2/JS-Git-Api">GitHub API</a>
             <p>
               GitHub Api
             </p>
+            <img src="img/git.png" alt="github api app" />
             <span class="back">back</span>
           </div>
-          <div id="soon-info" class="work-content">
-            <img src="img/Coming Soon .png" alt="" />
-            <a href="#">Coming soon</a>
+          <div id="noble-info" class="work-content">
+            <a href="#">The Noble Bitter Company</a>
+            <img src="img/Noble Middle.png" alt="" />
             <span class="back">back</span>
           </div>
         </div>
