--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
                   <h2>Taproom</h2>
                   <h3>JavaScript Angular</h3>
                 </div>
-                <div id="git" class="work-name">
-                  <h2>GitHub Search</h2>
-                  <h3>JavaScript API</h3>
-                </div>
                 <div id="noble" class="work-name">
                   <h2>The Noble Bitter Company</h2>
                   <h3>Branding // UI UX // Web</h3>
+                </div>
+                <div id="game" class="work-name">
+                  <h2>Game of Games</h2>
+                  <h3>JavaScript Ember</h3>
                 </div>
               </div>
           <!-- </div> -->
@@ -92,22 +92,29 @@
             <img src="img/wild.png" alt="hello wild css" />
             <span class="back">back</span>
           </div>
-          <div id="git-info" class="work-content">
-            <a href="https://github.com/mthygesen2/JS-Git-Api">GitHub API</a>
-            <p>
-              GitHub Api
-            </p>
-            <img src="img/git.png" alt="github api app" />
-            <span class="back">back</span>
-          </div>
           <div id="noble-info" class="work-content">
             <a href="#">The Noble Bitter Company</a>
+            <h2>Branding // UI UX // Web</h2>
+            <p>
+              Develop a clean, simple, modern yet classic website that embodies the brand identity of The Noble Bitter Company.
+            </p>
             <img src="img/Noble Middle.png" alt="" />
             <span class="back">back</span>
           </div>
           <div id="sass-info" class="work-content">
             <a href="https://projects.invisionapp.com/share/UA7DW0XCZ#/screens/160262379">SASS WATCH</a>
-            <img src="img/rob.png" alt="" />
+            <h2>Prototype // UI UX</h2>
+            <div class="info-img">
+              <!-- <img src="img/rob.png" alt="Squatch" /> -->
+              <img src="img/sass.png" alt="iPhone Image" />
+            </div>
+            <span class="back">back</span>
+          </div>
+          <div id="game-info" class="work-content">
+            <a href="#">Game of Games</a>
+            <h2>JavaScript Ember</h2>
+            <div class="info-img">
+            </div>
             <span class="back">back</span>
           </div>
         </div>
