webkit for animation

--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
             <a href="#">The Noble Bitter Company</a>
             <h2>Branding // UI UX // Web</h2>
             <p>
-              Develop a clean, simple, modern yet classic website that embodies the brand identity of The Noble Bitter Company.
+              Challenge: Develop a clean, simple, modern yet classic brand identity that embodies The Noble Bitter Company.
+              <br>
+              In Process
             </p>
             <img src="img/Noble Middle.png" alt="" />
             <span class="back">back</span>
@@ -102,8 +104,13 @@
           <div id="sass-info" class="work-content">
             <a href="https://projects.invisionapp.com/share/UA7DW0XCZ#/screens/160262379">SASS WATCH</a>
             <h2>Prototype // UI UX</h2>
+            <p>
+              Challenge: Make something that will get people out more.
+              <br>
+              SASS WATCH was created in order to get people out more in a fun and engaging way. As a player (hunter) you go around town in search of Squatches lurking around. By simply using your camera on your phone you can track them down and snap a picture. By collecting points for each Squatch captured, you gain levels.
+
+            </p>
             <div class="info-img">
-              <!-- <img src="img/rob.png" alt="Squatch" /> -->
               <img src="img/sass.png" alt="iPhone Image" />
             </div>
             <span class="back">back</span>
@@ -111,6 +118,9 @@
           <div id="game-info" class="work-content">
             <a href="#">Game of Games</a>
             <h2>JavaScript Ember</h2>
+            <p>
+              A mock e-commerce site for a game store. Made in Ember.js. As a user you can add items to the shopping cart, review games, search by category. The owner can edit, add, delete games. 
+            </p>
             <div class="info-img">
             </div>
             <span class="back">back</span>
