add mock images for all apps

--- a/index.html
+++ b/index.html
@@ -33,9 +33,6 @@
             <h1 id="h">H<h1>
             <h1 id="hello">ELLO</h1>
             <h1 id="backgroundText">HELLO</h1>
-            <!-- <audio controls autoplay>
-              <source src="img/neonSound.mp3" type="audio/mpeg">
-            </audio> -->
           </div>
           <p class="intro">
             my name is <br> mao thygesen
@@ -78,7 +75,7 @@
             <p>
               An application that show cases the use of Angular2 while it was still in beta. A functional app made with limited documentation.
             </p>
-            <img src="img/Taproom.png" alt="taproom app" />
+            <img id="taproom-img"src="img/taproom/taproom.png" alt="taproom app" />
             <span class="back">back</span>
           </div>
           <div id="wild-info" class="work-content">
@@ -87,16 +84,18 @@
             <p>
               A replica of the site Arctic Wild. Made purely using CSS and Html.
             </p>
-            <img src="img/wild.png" alt="hello wild css" />
+            <div class="info-img">
+              <img id="wild-img" src="img/wild/wild.png" alt="hello wild css" />
+            </div>
             <span class="back">back</span>
           </div>
           <div id="noble-info" class="work-content">
             <a href="#">The Noble Bitter Company</a>
             <h2>Branding // UI UX // Web</h2>
+            <h2>In Process</h2>
             <p>
               Challenge: Develop a clean, simple, modern yet classic brand identity that embodies The Noble Bitter Company.
               <br>
-              In Process
             </p>
             <img src="img/Noble Middle.png" alt="" />
             <span class="back">back</span>
@@ -108,10 +107,13 @@
               Challenge: Make something that will get people out more.
               <br>
               SASS WATCH was created in order to get people out more in a fun and engaging way. As a player (hunter) you go around town in search of Squatches lurking around. By simply using your camera on your phone you can track them down and snap a picture. By collecting points for each Squatch captured, you gain levels.
-
             </p>
             <div class="info-img">
-              <img src="img/sass.png" alt="iPhone Image" />
+              <h2>Color</h2>
+              <img src="img/sasswatch/color.png" alt="Color Palette for SASS WATCH" />
+              <h2>Typography</h2>
+              <img src="img/sasswatch/typo.png" alt="Sass Watch Typography" />
+              <img src="img/sasswatch/Iphone.png" alt="iPhone Image" />
             </div>
             <span class="back">back</span>
           </div>
@@ -119,9 +121,10 @@
             <a href="#">Game of Games</a>
             <h2>JavaScript Ember</h2>
             <p>
-              A mock e-commerce site for a game store. Made in Ember.js. As a user you can add items to the shopping cart, review games, search by category. The owner can edit, add, delete games. 
+              A mock e-commerce site for a game store. Made in Ember.js. As a user you can add items to the shopping cart, review games, search by category. The owner can edit, add, delete games.
             </p>
             <div class="info-img">
+              <img id="game-img" src="img/game/mac.png" alt="Game of Games" />
             </div>
             <span class="back">back</span>
           </div>
