fix work section

--- a/index.html
+++ b/index.html
@@ -109,10 +109,14 @@
               SASS WATCH was created in order to get people out more in a fun and engaging way. As a player (hunter) you go around town in search of Squatches lurking around. By simply using your camera on your phone you can track them down and snap a picture. By collecting points for each Squatch captured, you gain levels.
             </p>
             <div class="info-img">
-              <h2>Color</h2>
-              <img src="img/sasswatch/color.png" alt="Color Palette for SASS WATCH" />
-              <h2>Typography</h2>
-              <img src="img/sasswatch/typo.png" alt="Sass Watch Typography" />
+              <div>
+                <h2>Color</h2>
+                <img src="img/sasswatch/color.png" alt="Color Palette for SASS WATCH" />
+              </div>
+              <div>
+                <h2>Typography</h2>
+                <img src="img/sasswatch/typo.png" alt="Sass Watch Typography" />
+              </div>
               <img src="img/sasswatch/Iphone.png" alt="iPhone Image" />
             </div>
             <span class="back">back</span>
